fix text not legible in seconday nav on some themes
change to `surface-container` and `on-surface-container` to guarantee legibility.

--- a/src/css/themes/barbie.css
+++ b/src/css/themes/barbie.css
@@ -88,10 +88,6 @@
     border-bottom: 3px solid oklch(75% 0.15 340);
   }
 
-  .app-header__secondary-nav {
-    background: oklch(90% 0.06 350);
-  }
-
   & body {
     font-family: "Nunito", sans-serif;
   }
